--- a/list-features.css
+++ b/list-features.css
@@ -1,1 +1,125 @@
 
+    *,
+    *:before,
+    *:after{
+        padding: 0;
+        float: center;
+        box-sizing: border-box;
+
+        margin: 0;
+    }
+
+
+    
+    .header {
+        font-size: 30px;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        text-align: center;
+    padding: 30px 40px;
+    color: white;
+    
+
+        
+}
+    
+    
+    body{
+        height: 100vh;
+        background-image: linear-gradient(rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.6)), url('forest.jpg'); 
+        background-repeat: no-repeat; 
+        background-size: cover; 
+        
+    }
+    .taskassign{
+        
+        width: 60%;
+        top: 50%;
+        left: 50%;
+        min-width: 450px;
+        
+        position: absolute;
+        min-height: 100px;
+        transform: translate(-50%,-50%);
+        
+        background: rgb(195, 223, 236);
+    }
+
+    #newtask{
+        
+        padding: 30px 20px;
+        position: relative;
+    }
+
+    #newtask input{
+        width: 75%;
+        height: 45px;
+        padding: 12px;
+        color: #111111;
+        font-weight: 500;
+        position: relative;
+
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-size: 15px;
+        border: 2px solid #d1d3d4;
+    }
+
+    #newtask input:focus{
+        outline: none;
+        border-color: #0d75ec;
+    }
+    #newtask button{
+        position: relative;
+        float: right;
+        
+        background-color: #0d75ec;
+        border: none;
+        color: #ffffff;
+        outline: none;
+        width: 20%;
+        height: 45px;
+
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-weight: 500;
+        font-size: 16px;
+
+    }
+
+    #list{
+
+        width: 97%;
+        position: relative;
+        background-color: rgb(195, 223, 236);
+        margin-top: 8px;
+        padding: 30px 22px;
+        margin-top: 10px;
+    }
+
+    .item{
+        border: 1px solid #034c64;
+        justify-content: space-between;
+        padding: 5px 12px;
+
+        background-color: #96d8e4;
+        height: 40px;
+        margin-bottom: 8px;
+
+        display: flex;
+    }
+
+    .item button{
+        background-color: #04a111;
+        color: #ffffff;
+        border: 1px solid #030f13;
+
+        height: 95%;
+ 
+   
+    }
+
+
+    .item span{
+        
+        font-size: 16.2px;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    }
+
